# software_arq_robots_course

./: map.yaml
behavior_trees/src/: nodo_behavior_trees.cpp
cameras_cpp/: CMakeLists.txt  package.xml
cameras_cpp/msg/: bbx_custom.msg
cameras_cpp/src/: nodo_bbx.cpp  nodo_rgbd_filter.cpp  nodo_rgbd_tf.cpp
comms_cpp/src/: nodo_distance_server.cpp  nodo_sequence_client.cpp  nodo_sequence_server.cpp
geometry_tf/: CMakeLists.txt
geometry_tf/src/: nodo_tf_sub.cpp
navigation/launch/: slam_mapping.launch
navigation/param/: dwa_local_planner_params.yaml
